kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: retail-app
  labels:
    name: retail-app
